package edu.ncsu.csc216.wolf_tasks.io;

import edu.ncsu.csc216.wolf_tasks.model.Notebook;
import edu.ncsu.csc216.wolf_tasks.model.Task;
import edu.ncsu.csc216.wolf_tasks.model.TaskList;

public class NotebookReader {

    public NotebookReader() {

    }

    public static Notebook readNotebookFromFile(String input) {
        return null;
    }

    private static TaskList processTaskList(String input) {
        return null;
    }

    private static Task processTask(String input) {
        return null;
    }

}
