package edu.ncsu.csc216.wolf_tasks.io;

import edu.ncsu.csc216.wolf_tasks.model.Notebook;

public class NotebookWriter {

    public NotebookWriter() {

    }

    public static void writeNotebookToFile(String input, Notebook notebook) {

    }

}
