package edu.ncsu.csc216.wolf_tasks.view.ui;

import java.awt.event.ActionEvent;

public class NotebookGUI {

    public NotebookGUI() {

    }

    public void actionPerformed(ActionEvent event) {
        //Method in the ActionListener interface
    }

    public static void main(String[] args) {
        //main method
    }


}
