@startuml

title __WOLFTASKS's Class Diagram__\n

  namespace edu.ncsu.csc216.wolf_tasks.io {
    class edu.ncsu.csc216.wolf_tasks.io.NotebookReader {
    }
  }
  

  namespace edu.ncsu.csc216.wolf_tasks.io {
    class edu.ncsu.csc216.wolf_tasks.io.NotebookWriter {
    }
  }
  

  namespace edu.ncsu.csc216.wolf_tasks.manager {
    class edu.ncsu.csc216.wolf_tasks.manager.NotebookManager {
    }
  }
  

  namespace edu.ncsu.csc216.wolf_tasks.model {
    class edu.ncsu.csc216.wolf_tasks.model.Notebook {
    }
  }
  

  namespace edu.ncsu.csc216.wolf_tasks.model {
    class edu.ncsu.csc216.wolf_tasks.model.Task {
    }
  }
  

  namespace edu.ncsu.csc216.wolf_tasks.model {
    class edu.ncsu.csc216.wolf_tasks.model.TaskList {
    }
  }
  

  namespace edu.ncsu.csc216.wolf_tasks.view.ui {
    class edu.ncsu.csc216.wolf_tasks.view.ui.NotebookGUI {
    }
  }
  

  edu.ncsu.csc216.wolf_tasks.manager.NotebookManager o-- edu.ncsu.csc216.wolf_tasks.model.TaskList : activeTaskList
  edu.ncsu.csc216.wolf_tasks.manager.NotebookManager o-- edu.ncsu.csc216.wolf_tasks.model.TaskList : currentTaskList
  edu.ncsu.csc216.wolf_tasks.manager.NotebookManager o-- edu.ncsu.csc216.wolf_tasks.model.Notebook : notebook
  edu.ncsu.csc216.wolf_tasks.model.TaskList o-- edu.ncsu.csc216.wolf_tasks.model.Task : currentTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
